Tue Sep 10 14:19:08 1996  Tom Yu  <tlyu@mit.edu>

	* kprop.M, kpropd.M: remove ".so man1/header.doc"

Mon Aug 12 14:33:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kpropd.c: rework to use kdb5_util instead of kdb5_edit; don't
 	send # bytes received until kdb5_util succeeds, so kprop won't
 	print SUCCESS until it is true; accept an acl_file name on the
 	command line

Fri Mar 15 14:33:06 1996  Richard Basch  <basch@lehman.com>

	* kprop.c: Corrected various memory leaks and unreferenced 
	memory access conditions.

Tue Mar 12 14:01:32 1996  Richard Basch  <basch@lehman.com>

	* kprop.c: Write a byte to the last-prop file to ensure the file
		modtime is updated.  Simply opening the file isn't sufficient.

Wed Mar  6 16:15:46 1996  Richard Basch  <basch@lehman.com>

	* kprop.c: The credentials cache should be destroyed after any error.

Tue Mar  5 12:20:00 1996  Richard Basch  <basch@lehman.com>

	* kprop.c: Call krb5_sname_to_principal rather than doing the OS
	specific calls; this also deals with site-specific hostname
	munging that might have occurred.
	  Removed a trailing ; that caused a spurious message to be printed
	even upon success.

	* kpropd.c: Call krb5_sname_to_principal rather than doing the OS
	specific calls.
	  Open the lock file read-write, as required by
	POSIX.
	  Downgrade the lock to a shared lock prior to the execution
	of kdb5_edit (it also tries to place a shared lock on the dump file).

Wed Sep 13 23:53:19 1995  Mark Eichin  <eichin@cygnus.com>

	* kprop.h (KPROP_SRVTAB, KPROP_DEFAULT_FILE, KPROPD_DEFAULT_FILE,
	KPROPD_DEFAULT_KDB5_EDIT, KPROPD_DEFAULT_KRB_DB, KPROPD_ACL_FILE):
	removed configurable pathnames, they are now in osconf.h (which
	gets included here via k5-int.h).

Wed Aug 16 02:45:19 1995  Chris Provenzano <proven@mit.edu>

        * kprop.c, kpropd.c: Pass fds to krb5_lock_file() and krb5_unlock_file()

Fri Jul 7 16:34:36 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.